# integrate_pkgs

ur_ws/src/integrate_pkgs/: README.md
ur_ws/src/integrate_pkgs/annotation/semantic_2d/: CMakeLists.txt  package.xml
ur_ws/src/integrate_pkgs/annotation/semantic_2d/launch/: setup_semantic.launch
ur_ws/src/integrate_pkgs/annotation/yolo_annotation/: CMakeLists.txt
ur_ws/src/integrate_pkgs/annotation/yolo_annotation/launch/: kai_yolo_annotation.launch  kai_yolo_annotation_all_HV8.launch
ur_ws/src/integrate_pkgs/annotation/yolo_annotation/scripts/: move_object_yolo_kai.py  move_service_object.py  move_yolo_object.py
ur_ws/src/integrate_pkgs/annotation/yolo_annotation/src/: yolo_annotation_kai.cpp  yolo_annotation_kai_all_HV8.cpp
ur_ws/src/integrate_pkgs/denso_msgs/: CMakeLists.txt
ur_ws/src/integrate_pkgs/denso_srvs/: CMakeLists.txt
ur_ws/src/integrate_pkgs/denso_srvs/srv/: Acc_bridge.srv  Acc_pcl_dnn.srv  bounding_multi.srv  input_bridge_multi.srv  sensor_data_service.srv
ur_ws/src/integrate_pkgs/estimation/all_estimator/: CMakeLists.txt  package.xml
ur_ws/src/integrate_pkgs/estimation/all_estimator/include/all_estimator/: 2D_to_3D_insnum.hpp  2D_to_3D_insnum_multi.hpp  Acc_2D_to_3D_insnum.hpp  yolo_server_2D.h
ur_ws/src/integrate_pkgs/estimation/all_estimator/launch/: Acc_client.launch  Acc_first.launch  Acc_second.launch  Acc_third.launch  ICP_pub.launch  calculate_error.launch  calcurate_error.launch  convert_tf.launch  integ_second.launch  integ_third.launch  ishiyama_yolo.launch  message_receiver.launch  model_tf.launch  yolo_first_input.launch
ur_ws/src/integrate_pkgs/estimation/all_estimator/scripts/: Acc_integ_client.py  Acc_read_hdf5.py  Acc_semantic_server.py  Deocclusion.py  SemSeg_2D.py  integ_client.py  integ_client_old.py  message_receiver.py  pose_es.py  realsense_pose_estimate.py  semantic_server.py  semantic_server_old.py  yolo_client_2D.py
ur_ws/src/integrate_pkgs/estimation/all_estimator/src/: 2D_to_3D_insnum.cpp  2D_to_3D_insnum_multi.cpp  Acc_2D_to_3D_insnum.cpp  ICP_server.cpp  calculate_error.cpp  calcurate_error.cpp  convert_tf.cpp  message_server.cpp  model_tf_publisher.cpp  model_tf_publisher_node.cpp  quaternion_convert.cpp  yolo_server_2D.cpp
ur_ws/src/integrate_pkgs/networks/Deocclusion/: .gitignore  demo_utils.py  inference.py
ur_ws/src/integrate_pkgs/networks/Deocclusion/models/: partial_completion_mask.py  single_stage_model.py
ur_ws/src/integrate_pkgs/networks/Deocclusion/utils/: data_utils.py  distributed_utils.py
ur_ws/src/integrate_pkgs/networks/SemSeg_2D/: .gitignore  option.py
ur_ws/src/integrate_pkgs/networks/common_function/: cloud_util.py  util.py  writer.py
ur_ws/src/integrate_pkgs/networks/pcl_template_matting/pointnet_temmat/: POINTNET_temmat.py  __init__.py  pose_estimate.py  temmat_exec.py  train.py  train.sh
ur_ws/src/integrate_pkgs/networks/raugh_recognition/pointnet_pose/: POINTNET.py  pointnet_exec.py  pose_estimate.py  train.py  train.sh
ur_ws/src/integrate_pkgs/networks/semantic_segmentation/pointnet_semantic/: POINTNET_SEMANTIC.py  semantic_exec.py  train.sh
ur_ws/src/integrate_pkgs/networks/yolov3/config/: signal_classes_1.txt  yolov3_denso.yaml  yolov3_signal.yaml  yolov3tiny_signal.yaml
ur_ws/src/integrate_pkgs/robot_environment/3d_calibration_pkgs/calibration_setting/: CMakeLists.txt  package.xml
ur_ws/src/integrate_pkgs/robot_environment/3d_calibration_pkgs/calibration_setting/include/calibration_setting/: calibration_3d.hpp
ur_ws/src/integrate_pkgs/robot_environment/3d_calibration_pkgs/calibration_setting/launch/: calibration_3d.launch
ur_ws/src/integrate_pkgs/robot_environment/3d_calibration_pkgs/calibration_setting/src/: calibration_3d.cpp
ur_ws/src/integrate_pkgs/robot_environment/3d_calibration_pkgs/w2d_to_3d_ros/: CMakeLists.txt  package.xml
ur_ws/src/integrate_pkgs/robot_environment/arm_manipulation/: CMakeLists.txt  package.xml
ur_ws/src/integrate_pkgs/robot_environment/message_store/: CMakeLists.txt  package.xml
ur_ws/src/integrate_pkgs/robot_environment/message_store/src/: message_receiver.cpp
ur_ws/src/integrate_pkgs/robot_environment/moveit/ur_and_robotiq_85_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur_ws/src/integrate_pkgs/robot_environment/moveit/ur_calibration_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+123 files in other folders)
